--- a/blog.html
+++ b/blog.html
@@ -554,14 +554,14 @@ the ones you see by default was colored by me, click the image for switching to 
 </pre>
 <br><br>
 
-<center><img id="mine" width="430px" height="auto" src="https://i.imgur.com/BoX5z8r.gif"
+<center><img id="mine" width="430px" height="auto" src="./img/luupon-comm-gift-me-1.png"
 style="display: block;"
 onclick="{document.getElementById('mine').style.display = 'none';
 document.getElementById('luupon').style.display = 'block';}"/></center>
         <script type = "text/javascript">
             var image1 = document.getElementById("mine");
             var currentPos1 = 0;
-            var images1 = ["https://i.imgur.com/QF1zJgt.png", "https://i.imgur.com/lqCnOzR.png"]
+            var images1 = ["./img/luupon-comm-gift-me-1.png", "./img/luupon-comm-gift-me-2.png"]
 
             function volgendefoto1() {
                 if (++currentPos1 >= images1.length)
@@ -573,14 +573,14 @@ document.getElementById('luupon').style.display = 'block';}"/></center>
             setInterval(volgendefoto1, 1000);
         </script>
 
-<center><img id="luupon" width="430px" height="auto" src="https://i.imgur.com/gKegpK4.png"
+<center><img id="luupon" width="430px" height="auto" src="./img/luupon-comm-gift-1.png"
 style="display: none;"
 onclick="{document.getElementById('luupon').style.display = 'none';
 document.getElementById('mine').style.display = 'block';}"/></center>
         <script type = "text/javascript">
             var image2 = document.getElementById("luupon");
             var currentPos2 = 0;
-            var images2 = ["https://i.imgur.com/gKegpK4.png", "https://i.imgur.com/nsazRJt.png"]
+            var images2 = ["./img/luupon-comm-gift-1.png", "./img/luupon-comm-gift-2.png"]
 
             function volgendefoto2() {
                 if (++currentPos2 >= images2.length)
