--- a/fashion.html
+++ b/fashion.html
@@ -620,6 +620,8 @@ p { margin: 0; }
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/7.jpg"/><br><br>
 <br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/08.jpg"/><br><br>
+<br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/8.jpg"/><br><br>
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/9.jpg"/><br><br>
