--- a/status.html
+++ b/status.html
@@ -471,7 +471,9 @@ z-index: 3;
 <div style="padding-left: 140px; padding-top: 75px;">
 <div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 300px; height: 170px; overflow-x: hidden; overflow: auto; overflow: scroll; z-index: 30; text-align:justify; line-height: 8px;">
 
+　<sub><img src="https://i.imgur.com/t1l6f1l.png"></sub>　<font color="#e3d3d6" style="border-bottom:1px dashed #ccbec1"><sup>11.19.21</sup></font> <font color="#cfbec2">꒱</font>　naps and cuddles ♡
 
+<br><br><br>
 　<sub><img src="https://i.imgur.com/frgdxTH.png"></sub>　<font color="#e0cace" style="border-bottom:1px dashed #ccbec1"><sup>10.24.21</sup></font> <font color="#c4b3b6">꒱</font>　things are simple yet so complicated
 
 <br><br><br>
@@ -497,9 +499,6 @@ z-index: 3;
 
 <br><br><br>
 　<sub><img src="https://i.imgur.com/r2hI9Vg.png"></sub>　<font color="#e0cace" style="border-bottom:1px dashed #ccbec1"><sup>02.16.21</sup></font> <font color="#c4b3b6">꒱</font>　create with your heart
-
-<br><br><br>
-　<sub><img src="https://i.imgur.com/t1l6f1l.png"></sub>　<font color="#e3d3d6" style="border-bottom:1px dashed #ccbec1"><sup>01.06.21</sup></font> <font color="#cfbec2">꒱</font>　being patient. ♡
 
 <br><br>
 
