--- a/index.html
+++ b/index.html
@@ -459,9 +459,9 @@ z-index: 3;
 <div style="line-height: 10px"><center><sub><sub><img src="https://i.imgur.com/2Ntnpfr.gif"></sub></sub> ‌ <font color="#cfabab" style="font-size:10px;">updates</font> ‌ <sub><sub><img src="https://i.imgur.com/fy4LEng.gif"></sub></sub></center>
 <br></div>
 　　11.19 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> photo on: <a href="/fashion" style="text-decoration: none;"><font color="#DFB7B7">/fashion</font></a><br>
-　　11.19 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> entry on: <a href="/status" style="text-decoration: none;"><font color="#DFB7B7">/status</font></a><br>
+　　11.19 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> entry on: <a href="/status" style="text-decoration: none;"><font color="#DFB7B7">/status</font></a><br>
 　　10.24 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> update on: <a href="/gaming" style="text-decoration: none;"><font color="#DFB7B7">/gaming</font></a><br>
-　　10.24 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> entry on: <a href="/status" style="text-decoration: none;"><font color="#DFB7B7">/status</font></a><br>
+　　10.24 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> entry on: <a href="/status" style="text-decoration: none;"><font color="#DFB7B7">/status</font></a><br>
 　　10.23 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> update on: <a href="/portfolio" style="text-decoration: none;"><font color="#DFB7B7">/portfolio</font></a><br>
 </div>
 </center>
