--- a/blog.html
+++ b/blog.html
@@ -764,7 +764,7 @@ something that is very popular on internet for a long time, "unicode fonts" , ar
 only a few suffixes have symbols that are equivalents to them, one of the shortest being : <b>cc </b>, or , <b>㏄</b> .
 the .cc suffix was an easy choice for me, because it matches the little wing very well, and can also be used as 1 symbol.
 
-yes, i am very proud to announce that i am now the owner of the super short and cute domain : <a id="linkbjinho" href="https://ഒ.㏄" target="_blank">ഒ.㏄</a> !!
+yes, i am very proud to announce that i am now the owner of the super short and cute domain : <a id="linkbjinho" href="http://ഒ.cc" target="_blank">ഒ.㏄</a> !!
 if you enter it, you are simply directed to <b>middlepot.com</b> , and that's it.
 i know that this is a very silly thing to spend money on, but i'm really happy with that, okay ? it was absurdly cheap for a domain that is literally "1 letter dot 1 letter" !!! no regrets .
 
