--- a/blog.html
+++ b/blog.html
@@ -519,7 +519,7 @@ all we ask for is a one-time payment, and most of all, respect.
 i am grateful that 99% of the people i encounter are kindred spirits, absolutely lovely, that supports the poofties brand enough so that we can afford to keep all these projects going on !
 
 i decided to give us a break,, not only in the sense of taking days off from time to time ( as every human being deserves ) but also allow ourselves to take more than a few hours to respond to messages, and fix bugs.
-with time and experience, the game will become a lot more stable ( it already is, 95% of the bug list is gone, and i haven't received anynew complains these last days ) and of course this time of the year is stressful for everyone, because of the holidays, so i am okay with working extra hard for releasing events accordingly ( it means a lot to me, and makes everyone happy too ) !
+with time and experience, the game will become a lot more stable ( it already is, 95% of the bug list is gone, and i haven't received any new complains these last days ) and of course this time of the year is stressful for everyone, because of the holidays, so i am okay with working extra hard for releasing events accordingly ( it means a lot to me, and makes everyone happy too ) !
 but i have also been getting more orders for the <a id="linkbjinho" href="https://shybunny.middlepot.com" target="_blank">shy bunny store</a>, i have side projects to work on, and .. a life, personal interests, friends, hobbies <sub>🚲</sub>
 i believe i am responsible enough for being able to keep up with everything, i try my best to organize my schedule for taking time to everything i want to do, being it once a day, week or month.
 the only thing that is stressing me extra is the amount of messages, since the game is growing more & more each week ( which makes me really happy, it is a dream coming true <font color="#d3a5a5" style="font-size:11px;">♡</font> ) but my weeks don't have more hours in it.
@@ -571,7 +571,7 @@ basically, keep in mind that text i wrote recently on the q&a about the same sub
 all i ask for is that people can separate things, and not come at my throat when presented with the slightest discomfort while using one of my products. again : i deserve respect.
 
 when people are annoyed by something while making use of a game, software or platform, there is NO excuse for insulting, being rude, demanding and cynical with the people who are working on it.
-the feelings of the users are valid, and their criticism important, but developers are also people and have efelings. they go through a lot of stress when working and especially if they also have to manage support and customer service.
+the feelings of the users are valid, and their criticism important, but developers are also people and have feelings. they go through a lot of stress when working and especially if they also have to manage support and customer service.
 please, just try your best to be understanding and polite with other people <sub>💝</sub>
 
 i apologize about my huge ranting .. i really needed to vent about it, and let you know some things that i learned during my new experiences !
